add basic overlay and support for mouse/keyboard input, cleanup resources.cfg

--- a/assets/resources.cfg
+++ b/assets/resources.cfg
@@ -1,50 +1,50 @@
 # Resources required by the sample browser and most samples.
 [Essential]
-Zip=Assets/ogrelib/packs/SdkTrays.zip
-Zip=Assets/ogrelib/packs/profiler.zip
-FileSystem=Assets/ogrelib/thumbnails
+Zip=assets/ogrelib/packs/SdkTrays.zip
+Zip=assets/ogrelib/packs/profiler.zip
+FileSystem=assets/ogrelib/thumbnails
 
-[LowPoly]
-FileSystem=Assets/Meshes/
-FileSystem=Assets/Materials/
+[Procedural]
+FileSystem=assets/Meshes/
+FileSystem=assets/Materials/
 
 # Common sample resources needed by many of the samples.
 # Rarely used resources should be separately loaded by the
 # samples which require them.
 [Popular]
-FileSystem=Assets/ogrelib/fonts
-FileSystem=Assets/ogrelib/materials/programs
-FileSystem=Assets/ogrelib/materials/programs/Cg
-FileSystem=Assets/ogrelib/materials/programs/GLSL
-FileSystem=Assets/ogrelib/materials/programs/GLSL150
-FileSystem=Assets/ogrelib/materials/programs/GLSL400
-FileSystem=Assets/ogrelib/materials/programs/GLSLES
-FileSystem=Assets/ogrelib/materials/programs/HLSL
-FileSystem=Assets/ogrelib/materials/scripts
-FileSystem=Assets/ogrelib/materials/textures
-FileSystem=Assets/ogrelib/materials/textures/nvidia
-FileSystem=Assets/ogrelib/models
-FileSystem=Assets/ogrelib/particle
-FileSystem=Assets/ogrelib/DeferredShadingMedia
-FileSystem=Assets/ogrelib/PCZAppMedia
-FileSystem=Assets/ogrelib/RTShaderLib
-FileSystem=Assets/ogrelib/RTShaderLib/materials
-FileSystem=Assets/ogrelib/materials/scripts/SSAO
-FileSystem=Assets/ogrelib/materials/textures/SSAO
-FileSystem=Assets/ogrelib/volumeTerrain
-Zip=Assets/ogrelib/packs/cubemap.zip
-Zip=Assets/ogrelib/packs/cubemapsJS.zip
-Zip=Assets/ogrelib/packs/dragon.zip
-Zip=Assets/ogrelib/packs/fresneldemo.zip
-Zip=Assets/ogrelib/packs/ogretestmap.zip
-Zip=Assets/ogrelib/packs/ogredance.zip
-Zip=Assets/ogrelib/packs/Sinbad.zip
-Zip=Assets/ogrelib/packs/skybox.zip
-Zip=Assets/ogrelib/volumeTerrain/volumeTerrainBig.zip
+FileSystem=assets/ogrelib/fonts
+FileSystem=assets/ogrelib/materials/programs
+FileSystem=assets/ogrelib/materials/programs/Cg
+FileSystem=assets/ogrelib/materials/programs/GLSL
+FileSystem=assets/ogrelib/materials/programs/GLSL150
+FileSystem=assets/ogrelib/materials/programs/GLSL400
+FileSystem=assets/ogrelib/materials/programs/GLSLES
+FileSystem=assets/ogrelib/materials/programs/HLSL
+FileSystem=assets/ogrelib/materials/scripts
+FileSystem=assets/ogrelib/materials/textures
+FileSystem=assets/ogrelib/materials/textures/nvidia
+FileSystem=assets/ogrelib/models
+FileSystem=assets/ogrelib/particle
+FileSystem=assets/ogrelib/DeferredShadingMedia
+FileSystem=assets/ogrelib/PCZAppMedia
+FileSystem=assets/ogrelib/RTShaderLib
+FileSystem=assets/ogrelib/RTShaderLib/materials
+FileSystem=assets/ogrelib/materials/scripts/SSAO
+FileSystem=assets/ogrelib/materials/textures/SSAO
+FileSystem=assets/ogrelib/volumeTerrain
+Zip=assets/ogrelib/packs/cubemap.zip
+Zip=assets/ogrelib/packs/cubemapsJS.zip
+Zip=assets/ogrelib/packs/dragon.zip
+Zip=assets/ogrelib/packs/fresneldemo.zip
+Zip=assets/ogrelib/packs/ogretestmap.zip
+Zip=assets/ogrelib/packs/ogredance.zip
+Zip=assets/ogrelib/packs/Sinbad.zip
+Zip=assets/ogrelib/packs/skybox.zip
+Zip=assets/ogrelib/volumeTerrain/volumeTerrainBig.zip
 
 [General]
-FileSystem=Assets/ogrelib
+FileSystem=assets/ogrelib
 
 # Materials for visual tests
 [Tests]
-FileSystem=Assets/ogrelib/Assets/ogrelib/Tests/Media
+FileSystem=assets/ogrelib/assets/ogrelib/Tests/Media
